<resources>
    <string name="app_name">Mobile Prototype</string>
    <string name="action_start">start</string>
    <string name="title_idea">Have an app idea?</string>
    <string name="title_take_picture">Take pictures of your drawings.</string>
    <string name="title_link">Link them with hot spots.</string>
    <string name="title_play">Play and get feedback!</string>
    <string name="msg_description">
        Draw it on paper and use Mobile Prototype to make it come to life on your mobile
        devices
    </string>
    <string name="title_project">Project</string>
    <string name="title_introduction">Introduction</string>
    <string name="title_about">About</string>
    <string name="title_rate">Rate Us</string>
    <string name="msg_open_drawer">open</string>
    <string name="msg_close_drawer">close</string>
    <string name="msg_project">%d projects</string>
    <string name="msg_mock">%d mocks</string>
    <string name="msg_empty_project">Empty Project ^^</string>
    <string name="msg_grant_permission">Please grant all permissions! ^^</string>
    <string name="title_new_project">New Project</string>
    <string name="msg_project_name">Name</string>
    <string name="msg_project_description">Description</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_landcape">Landscape</string>
    <string name="action_add_poster">Change Poster</string>
    <string name="action_change_poster">Change</string>
    <string name="action_create_project">Create</string>
    <string name="action_cancel_project">Cancel</string>
    <string name="error_empty_project_name">Project name is empty!</string>
    <string name="error_project_name_exist">Project name is exist!</string>
    <string name="title_edit_project">Edit project</string>
    <string name="action_update_project">Update</string>
    <string name="title_delete_project">Are you sure?</string>
    <string name="msg_delete_project">Delete this project.</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="msg_empty_mock">Empty mock ^^</string>
    <string name="title_new_mock">New mock</string>
    <string name="title_edit_image">Edit</string>
    <string name="error_empty_mock_name">Mock name is empty!</string>
    <string name="action_remove_mock">Delete</string>
    <string name="msg_empty_mocks_to_remove">Empty mocks to delete!</string>
    <string name="title_delete_mock">Delete mocks</string>
    <string name="msg_delete_mocks">Delete all mocks chosen!</string>
    <string name="msg_number_mock_selected">%d mocks selected</string>
    <string name="action_delete_element">Delete</string>
    <string name="action_link_to">Link To</string>
    <string name="action_save">Save</string>
    <string name="msg_empty_element">Empty Element!</string>
    <string name="title_link_to">linkto</string>
    <string name="title_element">element</string>
    <string name="action_play">Play</string>
    <string name="action_search">Search</string>
    <string name="title_edit_mock">Edit mock</string>
    <string name="action_drawing">Drawing</string>
    <string name="action_take_photos">Take photos</string>
    <string name="action_import_from_gallery">Import from albums</string>
    <string name="title_draw">Draw</string>
    <string name="action_color">Color</string>
    <string name="action_undo">Undo</string>
    <string name="action_gesture">Gesture</string>
    <string name="title_gesture_tap">Tap</string>
    <string name="title_gesture_swipeup">Swipe Up</string>
    <string name="title_gesture_swipedown">Swipe Down</string>
    <string name="title_gesture_swipeleft">Swipe Left</string>
    <string name="title_gesture_swiperight">Swipe Right</string>
    <string name="title_gesture_zoomin">Zoom In</string>
    <string name="title_gesture_zoomout">Zoom Out</string>
    <string name="title_gesture_doubletap">Double Tap</string>
    <string name="msg_please_action">Please %s</string>
    <string name="title_link_to_screen">Link to screen</string>
    <string name="title_editing">Editing</string>
    <string name="title_transition">Transition</string>
    <string name="title_transition_fade_in">Fade in</string>
    <string name="title_transition_fade_out">Fade out</string>
    <string name="title_transition_push_up">Push up</string>
    <string name="title_transition_push_down">Push down</string>
    <string name="title_transition_push_left">Push left</string>
    <string name="title_transition_push_right">Push right</string>
    <string name="title_transition_slide_left">Slide left</string>
    <string name="title_transition_slide_right">Slide right</string>
    <string name="title_transition_slide_top">Slide top</string>
    <string name="title_transition_slide_bottom">Slide bottom</string>
    <string name="title_transition_rotate">Rotate</string>
    <string name="title_transition_flip">Flip</string>
    <string name="action_checkmark">Checkmark</string>
    <string name="title_transition_default">Default</string>
    <string name="title_transition_fade">Fade</string>
    <string name="action_edit">Edit</string>
    <string name="action_clone">Clone</string>
    <string name="title_clone_mock">Clone mock</string>
    <string name="action_clone_mock">Clone</string>
    <string name="msg_new_name">New name</string>
    <string name="title_from_project">From project</string>
    <string name="title_to_project">To project</string>
    <string name="text_ic_menu">&#8942;</string>
    <string name="action_share">Share</string>
    <string name="title_explore">Explore</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>
    <string name="title_register">Register</string>
    <string name="text_anonymous">Anonymous</string>
    <string name="text_anonymous_email">Anonymous email</string>
    <string name="title_drawer">Drawer header</string>
    <string name="action_add">Add</string>
    <string name="title_oval">Oval</string>
    <string name="title_rectangle">Rectangle</string>
    <string name="title_text">Text</string>
    <string name="title_image">Image</string>
    <string name="title_icon">Icon</string>
    <string name="title_icons">Icons</string>
    <string name="title_wireframes">Wireframes</string>
    <string name="title_apply">Apply</string>
    <string name="title_stroke">Stroke</string>
    <string name="title_background">Background</string>
    <string name="action_backgound_color">Background Color</string>
    <string name="action_library">Library</string>
    <string name="title_design">Design</string>
    <string name="title_choose_pattern">Choose a pattern</string>
    <string name="title_add_view">AddView</string>
    <string name="action_clear">Clear</string>
    <string name="action_bring_to_front">Bring to front</string>
    <string name="action_done">Done</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="action_create_account">Create an Account</string>
    <string name="facebook_app_id">674392939435337</string>
    <string name="title_signin">Sign in</string>
    <string name="title_facebook">Login with Facebook</string>
    <string name="title_google">Login with Google</string>
    <string name="preference_file_key">mobileprototype</string>
    <string name="title_upload">Uploading&#8230;</string>
    <string name="text_check_internet">No Internet connection. Make sure Wi-Fi or cellular data is turned on, then try again.</string>
    <string name="text_retry">Retry</string>
    <string name="action_ok">OK</string>
    <string name="text_do_you_want_download">Do you want to download this project?</string>
    <string name="title_download">Download&#8230;</string>
    <string name="text_upload_successful">Upload successful</string>
    <string name="text_upload_failed">Upload failed</string>
    <string name="text_download_successful">Download successful</string>
    <string name="text_download_failed">Download failed</string>
    <string name="text_empty_project">Empty project</string>
    <string name="text_please_change_other_name">Please change other name!</string>
    <string name="text_new_project_name">New project name</string>
    <string name="text_content">Type a message&#8230;</string>
    <string name="text_nothing_to_show">Nothing to show.</string>
    <string name="text_do_you_want_login_to_comment">Do you want to login for comment?</string>
    <string name="text_login_successful">Login successful</string>
    <string name="text_comment_error">Comment error</string>
    <string name="text_loading">Loading&#8230;</string>
    <string name="text_network_error">Network error!</string>
    <string name="text_send_to">Send To</string>
    <string name="text_do_you_want_share_link_of_project">Do you want to share link of this project now?</string>
    <string name="text_you">%s (You)</string>
</resources>
