<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="mock"
            type="com.framgia.mobileprototype.data.model.Mock"/>

        <variable
            name="presenter"
            type="com.framgia.mobileprototype.projectdetail.ProjectDetailContract.Presenter"/>

        <variable
            name="baseName"
            type="String"/>

        <variable
            name="project"
            type="com.framgia.mobileprototype.data.model.Project"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <TextView
            android:layout_width="@dimen/dp_280"
            android:layout_height="wrap_content"
            android:text="@string/title_clone_mock"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_20"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:enabled="false"
                android:text="@{baseName}"/>

            <EditText
                android:id="@+id/edit_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/msg_new_name"
                android:text="@={mock.title}"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/title_from_project"
            android:textSize="@{editProjectName.getTextSize()}"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@{project.title}"
            android:textColor="@color/colorPrimaryDark"
            android:enabled="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_to_project"
            android:textSize="@{editProjectName.getTextSize()}"/>

        <Spinner
            android:id="@+id/spinner_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20">

            <TextView
                android:id="@+id/text_create_project"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="@{() -> presenter.cloneMock(mock)}"
                android:text="@string/action_clone_mock"
                android:textColor="@color/colorPrimary"/>

            <TextView
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/text_create_project"
                android:onClick="@{() -> presenter.closeCloneMockDialog()}"
                android:text="@string/action_cancel_project"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

    </LinearLayout>
</layout>
