<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

        <import type="android.view.View"/>

        <variable
            name="presenter"
            type="com.framgia.mobileprototype.projectdetail.ProjectDetailContract.Presenter"/>

        <variable
            name="mock"
            type="com.framgia.mobileprototype.data.model.Mock"/>

        <variable
            name="isPortrait"
            type="boolean"/>
    </data>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20">

            <TextView
                android:layout_width="@dimen/dp_280"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/title_new_mock"
                android:textSize="@dimen/sp_20"/>

            <EditText
                android:id="@+id/edit_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/msg_project_name"
                android:text="@={mock.title}"/>

            <LinearLayout
                android:layout_marginTop="@dimen/dp_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_edit_image"
                    android:textColor="@color/colorPrimary"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="@{() -> presenter.chooseImage()}"/>

                <ImageView
                    android:id="@+id/image_portrait_mock"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_150"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:visibility="@{isPortrait ? View.VISIBLE : View.GONE}"/>

                <ImageView
                    android:id="@+id/image_landscape_mock"
                    android:layout_width="@dimen/dp_150"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:visibility="@{isPortrait ? View.GONE : View.VISIBLE}"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="@dimen/dp_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_create_project"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_create_project"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/colorPrimary"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_cancel_project"
                    android:layout_toLeftOf="@+id/text_create_project"
                    android:textColor="@color/colorPrimary"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</layout>
