<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>
        <import type="com.framgia.mobileprototype.util.LayoutManagerUtil"/>

        <variable
            name="control"
            type="com.framgia.mobileprototype.explore.ExploreViewControl"/>

        <variable
            name="presenter"
            type="com.framgia.mobileprototype.explore.ExploreContract.Presenter"/>
        <variable
            name="adapter"
            type="com.framgia.mobileprototype.explore.ExploreAdapter"/>
    </data>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:onRefresh="@{presenter}">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.framgia.mobileprototype.explore.ExploreActivity">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_project"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:adapter="@{adapter}"
                app:layoutManager="@{LayoutManagerUtil.linear()}"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="@{control.isLoading ? View.VISIBLE : View.GONE}"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:visibility="@{control.isError ? View.VISIBLE : View.GONE}">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_check_internet"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_20"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:textSize="@dimen/sp_24"
                    android:gravity="center_horizontal"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_retry"
                    android:layout_gravity="center_horizontal"
                    android:onClick="@{() -> presenter.prepare()}"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_nothing_to_show"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_centerInParent="true"
                android:textSize="@dimen/sp_24"
                android:gravity="center_horizontal"
                android:visibility="@{!control.isLoading &amp;&amp; !control.isError &amp;&amp; adapter.itemCount == 0 ? View.VISIBLE : View.GONE}"/>

        </RelativeLayout>

    </android.support.v4.widget.SwipeRefreshLayout>
</layout>
